# shotgun-query-field-test

./: .gitignore  LICENSE  Makefile  README.md  env_vars.json  pyproject.toml
src/shotgun_query_field_test/: credentials.py  main.py  shotgun.py  web.py
tests/: test_main.py  test_shotgun.py
