[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shotgun-query-field-test"
version = "0.1.0"
dependencies = [
    "shotgun-api3 @ git+https://github.com/shotgunsoftware/python-api@v3.6.2",
    "keyring~=25.6"
]
requires-python = ">=3.6"

[project.optional-dependencies]
test = ["pytest~=8.3"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false